--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,1 @@
-{"buildCommand": "npm run build", "outputDirectory": "dist", "devCommand": "npm run dev", "installCommand": "npm install", "framework": "vite", "env": {"VITE_SUPABASE_URL": "@supabase-url", "VITE_SUPABASE_ANON_KEY": "@supabase-anon-key"}}
+{"buildCommand": "npm run build", "outputDirectory": "dist", "devCommand": "npm run dev", "installCommand": "npm install", "framework": "vite"}
